--- a/jumbotron.css
+++ b/jumbotron.css
@@ -1,7 +1,7 @@
 /* Move down content because we have a fixed navbar that is 50px tall */
 body {
   padding-top: 50px;
-  padding-bottom: 20px;
+  padding-bottom: 0px;
 }
 
 .intro {
@@ -57,3 +57,15 @@ body {
 	color: #fff;
 	text-shadow: -1px 1px 1px #000;
 }
+
+/* Footer Fixed */
+
+.navbar-fixed-bottom {
+    background-color: #222;
+    border-top: 1px solid #080808;
+    padding: 15px 25px;
+ }
+
+
+
+
