--- a/jumbotron.css
+++ b/jumbotron.css
@@ -64,6 +64,30 @@ body {
     background-color: #222;
     border-top: 1px solid #080808;
     padding: 15px 25px;
+    color: #9d9d9d;
+ }
+
+ .main-footer {
+    postion: relative;
+    float: left;
+    width: 100vw;
+    font-size: 30px;
+ }
+
+ .main-footer-content {
+ 	width: 0 auto;
+ }
+
+ .main-footer-content ul {
+ 	width: 300px;
+ }
+
+ .secondary-footer {
+    position: relative;
+    float: left;
+    width: 100vw;
+    font-size: 14px;
+    color: #fff;
  }
 
 
