imported a few WP posts

--- a/_layouts/post.html
+++ b/_layouts/post.html
@@ -3,12 +3,11 @@
 <div class="post">
       <div class="row">
         <div class="col-md-6 col-md-offset-3" >
-        <h3>List of all posts: </h3>
-            {% for post in site.posts %}
-                <ul>
-                <li>{{ post.date | date: "%b %d, %Y" }} | <a href="{{post.url}}"> {{ post.title }}</a></li>
-                </ul> 
-			{% endfor %}
+        <h3>{{ page.title }} </h3>
+        <strong>{{ page.date | date: "%b %d, %Y" }}</strong>
+        <p> ---- </p>
+
+            {{ content }}
 		</div>
 	  </div>
 </div>
