--- a/_includes/footer.html
+++ b/_includes/footer.html
@@ -2,17 +2,24 @@
 
     <footer>
     <div class="navbar navbar-inverse navbar-fixed-bottom">
-        <div class="main-footer">
+        <!-- <div class="main-footer">
         <div class="main-footer-content">
         <ul class="nav navbar-nav navbar-big">
         <li><a href="https://garyditsch.github.io/">Home</a></li>
         <li><a href="https://garyditsch.github.io/about.html">About</a></li>
        </ul>
        </div>
-       </div>
+       </div> -->
        <div class="secondary-footer">
        <div class="secondary-footer-content">
-       Place sticky footer content here.  |  &copy; 2016.
+       {% if site.twitter_username %}
+          <li>
+          <a href="https://twitter.com/{{ site.twitter_username }}">
+          <i class="fa fa-twitter"></i> Twitter
+          </a>
+          </li>
+        {% endif %}
+       Place sticky footer content here.  |  &copy; 2016.  
        </div>
        </div>
     </div>
