--- a/_includes/header.html
+++ b/_includes/header.html
@@ -40,7 +40,7 @@
     </div>
     <ul class="nav navbar-nav navbar-right">
       <li><a href="/index.html">Home</a></li>
-      <li><a href="/about.html">About</a></li>
+      <li><a href="/about">About</a></li>
       <li><a href="/blog">Blog</a></li>
     </ul>
   </div>
