styling portfolio page

--- a/jumbotron1.css
+++ b/jumbotron1.css
@@ -4,6 +4,11 @@ body {
   /*padding-bottom: 70px;*/
 }
 
+.portfolio-image {
+	background-color: #ddd;
+	padding: 5px;
+}
+
 .intro {
 	width:100%;
 	position:relative;	
